operator/pkg/gateway-api/testdata/gateway/httproute-redirect-scheme-https-listener/output/httproute-apex-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apex-redirect
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - example.com
  parentRefs:
    - name: gw
      sectionName: https-apex
  rules:
    - filters:
        - requestRedirect:
            hostname: dash.example.com
            scheme: https
            statusCode: 301
          type: RequestRedirect
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-10-06T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-10-06T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gw
        sectionName: https-apex
