operator/pkg/gateway-api/testdata/gateway/httproute-redirect-scheme-https-listener/output/httproute-redirect-scheme-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-scheme-https
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
  - example.org
  parentRefs:
  - name: http-and-https
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-09-22T01:31:27Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-09-22T01:31:27Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: http-and-https
